--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.3",
+    "multer": "^1.4.2",
     "node-xlsx": "^0.15.0",
+    "nodemailer": "^6.4.11",
     "nodemon": "^2.0.4",
-    "read-excel-file": "^4.0.7"
+    "read-excel-file": "^4.0.7",
+    "unique-filename": "^1.1.1"
   }
 }
