--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemailer": "^6.4.11",
     "nodemon": "^2.0.4",
     "read-excel-file": "^4.0.7",
+    "rimraf": "^3.0.2",
     "unique-filename": "^1.1.1"
   }
 }
